--- a/devfile.yaml
+++ b/devfile.yaml
@@ -9,51 +9,17 @@ projects:
        checkoutFrom:
          revision: production
 components:
-  - name: runtime
-    container:
-      image: registry.access.redhat.com/ubi8/nodejs-18:latest
-      args: ['tail', '-f', '/dev/null']
-      memoryLimit: 1024Mi
-      mountSources: true
-      env:
-        - name: DEBUG_PORT
-          value: '5858'
-      endpoints:
-        - name: http-node
-          targetPort: 3000
-        - exposure: none
-          name: debug
-          targetPort: 5858
-commands:
-  - id: install
-    exec:
-      component: runtime
-      commandLine: npm install
-      workingDir: ${PROJECT_SOURCE}
-      group:
-        kind: build
-        isDefault: true
-  - id: run
-    exec:
-      component: runtime
-      commandLine: npm start
-      workingDir: ${PROJECT_SOURCE}
-      group:
-        kind: run
-        isDefault: true
-  - id: debug
-    exec:
-      component: runtime
-      commandLine: npm run debug
-      workingDir: ${PROJECT_SOURCE}
-      group:
-        kind: debug
-        isDefault: true
-  - id: test
-    exec:
-      component: runtime
-      commandLine: npm test
-      workingDir: ${PROJECT_SOURCE}
-      group:
-        kind: test
-        isDefault: true
+  name: innerloop
+  image:
+    imageName: sams-cola:latest
+    dockerfile:
+      git:
+        fileLocation: Dockerfile
+        checkoutFrom:
+          revision: 'main'
+          remote: 'origin'
+        remotes:
+          'origin': https://github.com/brandnewbox/cola-s2i
+      buildContext: .
+        
+ 
