--- a/devfile.yaml
+++ b/devfile.yaml
@@ -9,17 +9,17 @@ projects:
        checkoutFrom:
          revision: production
 components:
-  name: innerloop
-  image:
-    imageName: sams-cola:latest
-    dockerfile:
-      git:
-        fileLocation: Dockerfile
-        checkoutFrom:
-          revision: 'main'
-          remote: 'origin'
-        remotes:
-          'origin': https://github.com/brandnewbox/cola-s2i
-      buildContext: .
+  - name: innerloop
+    image:
+      imageName: sams-cola:latest
+      dockerfile:
+        git:
+          fileLocation: Dockerfile
+          checkoutFrom:
+            revision: 'main'
+            remote: 'origin'
+          remotes:
+            'origin': https://github.com/brandnewbox/cola-s2i
+        buildContext: .
         
  
