--- a/devfile.yaml
+++ b/devfile.yaml
@@ -10,16 +10,17 @@ projects:
          revision: production
 components:
   - name: innerloop
-    image:
-      imageName: sams-cola:latest
-      dockerfile:
-        git:
-          fileLocation: Dockerfile
-          checkoutFrom:
-            revision: 'main'
-            remote: 'origin'
-          remotes:
-            'origin': https://github.com/brandnewbox/cola-s2i
-        buildContext: .
+    container:
+      image:
+        imageName: sams-cola:latest
+        dockerfile:
+          git:
+            fileLocation: Dockerfile
+            checkoutFrom:
+              revision: 'main'
+              remote: 'origin'
+            remotes:
+              'origin': https://github.com/brandnewbox/cola-s2i
+          buildContext: .
         
  
