--- a/devfile.yaml
+++ b/devfile.yaml
@@ -14,7 +14,6 @@ components:
       image: brandnewbox/cola-ruby26-centos:v7
       cpuRequest: 450m
       memoryRequest: 256M
-      command:
-        - /bin/bash
+      command: ['/bin/bash']
        
  
