--- a/devfile.yaml
+++ b/devfile.yaml
@@ -11,7 +11,7 @@ projects:
 components:
   - name: innerloop
     container:
-      image: brandnewbox/cola-ruby26-centos
+      image: registry.access.redhat.com/ubi8/ruby-30
 
     
        
