--- a/devfile.yaml
+++ b/devfile.yaml
@@ -11,9 +11,7 @@ projects:
 components:
   - name: tools
     container:
-      # image: registry.redhat.io/devspaces/udi-rhel8:3.9
-      # image: registry.redhat.io/rhel8/ruby-31:latest
-      image: brandnewbox/cola-ruby26-centos:v7
+      image: registry.redhat.io/devspaces/udi-rhel8:3.9
       memoryLimit: '2Gi'
       memoryRequest: '1Gi'
       cpuLimit: '1'
@@ -24,12 +22,12 @@ components:
           name: 'hello-endpoint'
           protocol: http
           targetPort: 5032
-      volumeMounts:
-        - name: nuget
-          path: /home/user/.nuget
-  - name: nuget
-    volume:
-      size: 1G
+  #    volumeMounts:
+  #      - name: nuget
+  #        path: /home/user/.nuget
+ # - name: nuget
+ #   volume:
+ #     size: 1G
 
     
        
