--- a/devfile.yaml
+++ b/devfile.yaml
@@ -11,7 +11,8 @@ projects:
 components:
   - name: tools
     container:
-      image: registry.redhat.io/devspaces/udi-rhel8:3.9
+      #image: registry.redhat.io/devspaces/udi-rhel8:3.9
+      image: registry.access.redhat.com/ubi8/s2i-base:latest
       memoryLimit: '2Gi'
       memoryRequest: '1Gi'
       cpuLimit: '1'
