--- a/devfile.yaml
+++ b/devfile.yaml
@@ -68,8 +68,8 @@ components:
 commands:
   - id: build
     exec:
-      - commandLine: ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle
-        component: tools
+      commandLine: ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle
+      component: tools
 
   #    volumeMounts:
   #      - name: nuget
