--- a/devfile.yaml
+++ b/devfile.yaml
@@ -43,31 +43,31 @@ components:
           value: minio_development
         - name: MINIO_BUCKET
           value: secure-bucket
-  # - name: db
-  #   container:
-  #     args:
-  #       - --default-authentication-plugin=mysql_native_password 
-  #     image: mysql:8.0
-  #     memoryLimit: '2Gi'
-  #     memoryRequest: '1Gi'
-  #     cpuLimit: '1'
-  #     cpuRequest: '0.5'
-  #     mountSources: false
-  #     dedicatedPod: true
-  #     env:
-  #       - name: MYSQL_ROOT_PASSWORD
-  #         value: example
-  #       - name: MYSQL_DATABASE
-  #         value: sams_development
-  #       - name: MYSQL_USER
-  #         value: sams
-  #       - name: MYSQL_PASSWORD
-  #         value: samspassword
-  #     endpoints:
-  #       - name: db
-  #         targetPort: 3306
-  #         protocol: tcp
-  #         exposure: internal
+  - name: db
+    container:
+      args:
+        - --default-authentication-plugin=mysql_native_password 
+      image: mysql:8.0
+      memoryLimit: '2Gi'
+      memoryRequest: '1Gi'
+      cpuLimit: '1'
+      cpuRequest: '0.5'
+      mountSources: false
+      dedicatedPod: true
+      env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: example
+        - name: MYSQL_DATABASE
+          value: sams_development
+        - name: MYSQL_USER
+          value: sams
+        - name: MYSQL_PASSWORD
+          value: samspassword
+      endpoints:
+        - name: db
+          targetPort: 3306
+          protocol: tcp
+          exposure: internal
   # - name: db
   #   openshift:
   #     endpoints:
@@ -164,16 +164,6 @@ commands:
       label: Building dev-tools related gems
       workingDir: ${PROJECT_ROOT}/sams-cola/dev-tools
 
-
-events:
-  preStart: [ build-dev-tools ]
-
-  #    volumeMounts:
-  #      - name: nuget
-  #        path: /home/user/.nuget
- # - name: nuget
- #   volume:
- #     size: 1G
 
     
        
