--- a/devfile.yaml
+++ b/devfile.yaml
@@ -162,7 +162,7 @@ commands:
       group:
         kind: build
       label: Building dev-tools related gems
-      workingDir: ${PROJECT_ROOT}/sams-cola/dev-tools
+      workingDir: ${PROJECTS_ROOT}/sams-cola/dev-tools
 
 
     
