--- a/devfile.yaml
+++ b/devfile.yaml
@@ -154,7 +154,7 @@ commands:
   - id: build-dev-tools
     exec:
       commandLine: |
-        rvm use 3.1.3 && \
+        /bin/bash --login -c rvm use 3.1.3 && \
         bundle install
       
       component: tools
