--- a/devfile.yaml
+++ b/devfile.yaml
@@ -155,7 +155,7 @@ commands:
     exec:
       commandLine: |
         /bin/bash --login -c rvm use 3.1.3 && \
-        bundle install
+        cd ${PROJECT_SOURCE}/dev-tools && bundle install
       
       component: tools
       group:
