--- a/devfile.yaml
+++ b/devfile.yaml
@@ -154,8 +154,9 @@ commands:
   - id: build-dev-tools
     exec:
       commandLine: |
-        /bin/bash --login -c rvm use 3.1.3 && \
-        cd ${PROJECT_SOURCE}/dev-tools && bundle install
+        /bin/bash --login -c cd ${PROJECT_SOURCE}/dev-tools && \ 
+        rvm use 3.1.3 && \
+        && bundle install
       
       component: tools
       group:
