--- a/devfile.yaml
+++ b/devfile.yaml
@@ -154,9 +154,7 @@ commands:
   - id: build-dev-tools
     exec:
       commandLine: |
-        /bin/bash --login -c cd ${PROJECT_SOURCE}/dev-tools && \ 
-        rvm use 3.1.3 && \
-        && bundle install
+        /bin/bash --login -c 'cd ${PROJECT_SOURCE}/dev-tools && rvm use 3.1.3 && bundle install'
       
       component: tools
       group:
