--- a/devfile.yaml
+++ b/devfile.yaml
@@ -145,7 +145,7 @@ components:
 commands:
   - id: build
     exec:
-      commandLine: rvm use system && ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle && npm i
+      commandLine: /bin/bash --login -c 'rvm use system && ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle && npm i'
       component: tools
       label: Build project
       group:
