--- a/devfile.yaml
+++ b/devfile.yaml
@@ -68,6 +68,9 @@ components:
           targetPort: 3306
           protocol: tcp
           exposure: internal
+events:
+  postStart:
+    -  build
 commands:
   - id: build
     exec:
