--- a/devfile.yaml
+++ b/devfile.yaml
@@ -70,8 +70,12 @@ components:
           exposure: internal
 events:
   postStart:
-    - build
+    - justtesting
 commands:
+  - id: justtesting
+    exec:
+      commandLine: "echo "This is just a test"
+      component: app-server
   - id: build
     exec:
       commandLine: /bin/bash --login -c 'rvm use system && ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle && npm i'
