--- a/devfile.yaml
+++ b/devfile.yaml
@@ -80,7 +80,7 @@ components:
       image: registry.redhat.io/elastic/enterprise-search:7.16.2
       env:
         - name: xpack.security.enabled
-          value: false
+          value: 'false'
         - name: discovery.type
           value: single-node
       endpoints:
