--- a/devfile.yaml
+++ b/devfile.yaml
@@ -78,6 +78,10 @@ components:
   - name: es
     container:
       image: registry.connect.redhat.com/elastic/enterprise-search:7.16.2
+      memoryLimit: '2Gi'
+      memoryRequest: '1Gi'
+      cpuLimit: '1'
+      cpuRequest: '0.5'
       env:
         - name: xpack.security.enabled
           value: 'false'
