--- a/devfile.yaml
+++ b/devfile.yaml
@@ -75,6 +75,14 @@ components:
           value: us-east-1
         - name: MINIO_BUCKET
           value: secure-bucket
+  - name: createbuckets
+    container:
+      image: quay.io/minio/mc
+      command:
+        - /bin/sh
+      args:
+        - -c
+        - "/usr/bin/mc alias set myminio http://minio:9000 minio_development minio_development;/usr/bin/mc mb myminio/secure-bucket;exit 0;"
   - name: es
     container:
       image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
