--- a/devfile.yaml
+++ b/devfile.yaml
@@ -82,8 +82,8 @@ components:
         - /bin/sh
       args:
         - -c
-        - "/usr/bin/mc alias set myminio http://minio:9000 minio_development minio_development;/usr/bin/mc mb myminio/secure-bucket;exit 0;"
-  - name: es
+        - "/usr/bin/mc alias set myminio http://127.0.0.1:9000 minio_development minio_development;/usr/bin/mc mb myminio/secure-bucket;exit 0;"
+  name: es
     container:
       image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
       memoryLimit: '2Gi'
