--- a/devfile.yaml
+++ b/devfile.yaml
@@ -32,7 +32,7 @@ components:
         - name: MEMCACHED_HOST
           value: memcached
         - name: ELASTICSEARCH_URL
-          value: http://es:9200
+          value: http://127.0.0.1:9200
         - name: REDIS_URL
           value: redis://redis:6379
         - name: MAILDEV_HOST
