--- a/devfile.yaml
+++ b/devfile.yaml
@@ -127,7 +127,7 @@ components:
           exposure: internal
 events:
   postStart:
-    - createbuckets
+    - createbucket
 commands:
   - id: justtesting
     exec:
@@ -136,9 +136,8 @@ commands:
   - id: createbucket
     exec:
       commandLine: |
-        curl https://dl.min.io/client/mc/release/linux-amd64/mc \
-        --create-dirs \
-        -o $HOME/minio-binaries/mc
+        curl https://dl.min.io/client/mc/release/linux-amd64/mc 
+        
       component: app-server
       label: Create Minio Bucket
       workingDir: $HOME
