--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,25 +2,25 @@ schemaVersion: 2.1.0
 metadata:
   name: sams-dev
 projects:
-  -  name: sams-cola
-     git:
-       remotes: 
-         origin: 'git@github.com:la-county-isd/sams-cola.git'
-       checkoutFrom:
-         revision: main
+  - name: sams-cola
+    git:
+      remotes:
+        origin: "git@github.com:la-county-isd/sams-cola.git"
+      checkoutFrom:
+        revision: main
 components:
   - name: app-server
     container:
       #image: registry.redhat.io/devspaces/udi-rhel8:3.9
       image: quay.io/kayvon77/ruby-dev:1.0
-      memoryLimit: '2Gi'
-      memoryRequest: '1Gi'
-      cpuLimit: '1'
-      cpuRequest: '0.5'
+      memoryLimit: "2Gi"
+      memoryRequest: "1Gi"
+      cpuLimit: "1"
+      cpuRequest: "0.5"
       mountSources: true
       endpoints:
         - exposure: public
-          name: 'sams-endpoint'
+          name: "sams-endpoint"
           targetPort: 3000
       env:
         - name: RAILS_ENV
@@ -46,13 +46,13 @@ components:
   - name: minio
     container:
       image: minio/minio:RELEASE.2019-05-14T23-57-45Z
-     # memoryLimit: '2Gi'
-     # memoryRequest: '1Gi'
-     # cpuLimit: '1'
-     # cpuRequest: '0.5'
+      # memoryLimit: '2Gi'
+      # memoryRequest: '1Gi'
+      # cpuLimit: '1'
+      # cpuRequest: '0.5'
       mountSources: false
       command:
-        - minio 
+        - minio
       args:
         - server
         - /data/disk0
@@ -78,19 +78,19 @@ components:
   - name: es
     container:
       image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
-      memoryLimit: '2Gi'
-      memoryRequest: '1Gi'
-      cpuLimit: '1'
-      cpuRequest: '0.5'
+      memoryLimit: "2Gi"
+      memoryRequest: "1Gi"
+      cpuLimit: "1"
+      cpuRequest: "0.5"
       env:
         - name: ES_XPACK_SECURITY_ENABLED
-          value: 'false'
+          value: "false"
         - name: discovery.type
           value: single-node
         - name: ES_BOOTSTRAP_MEMORY_LOCK
-          value: 'false'
+          value: "false"
         - name: ES_JAVA_OPTS
-          value: '-Xms512m -Xmx512m -Dlog4j2.formatMsgNoLookups=true'
+          value: "-Xms512m -Xmx512m -Dlog4j2.formatMsgNoLookups=true"
         - name: ES_PATH_DATA
           value: /usr/share/elasticsearch/data
         - name: ES_PATH_LOGS
@@ -103,12 +103,12 @@ components:
   - name: db
     container:
       args:
-        - --default-authentication-plugin=mysql_native_password 
+        - --default-authentication-plugin=mysql_native_password
       image: mysql:8.0
-      memoryLimit: '2Gi'
-      memoryRequest: '1Gi'
-      cpuLimit: '1'
-      cpuRequest: '0.5'
+      memoryLimit: "2Gi"
+      memoryRequest: "1Gi"
+      cpuLimit: "1"
+      cpuRequest: "0.5"
       mountSources: false
       dedicatedPod: true
       env:
@@ -143,7 +143,7 @@ commands:
     exec:
       commandLine: |
         /bin/bash --login -c 'cd ${PROJECT_SOURCE}/dev-tools && rvm use 3.1.3 && bundle install'
-      
+
       component: app-server
       group:
         kind: build
@@ -153,14 +153,9 @@ commands:
     exec:
       commandLine: |
         /bin/bash --login -c 'rvm use system && ${PROJECT_SOURCE}/bin/bundle exec rake jobs:work'
-      
+
       component: app-server
       group:
         kind: run
       label: Run delayed_jobs server for SAMS
       workingDir: ${PROJECTS_ROOT}/sams-cola
-
-
-    
-       
- 
