--- a/devfile.yaml
+++ b/devfile.yaml
@@ -125,12 +125,25 @@ components:
           targetPort: 3306
           protocol: tcp
           exposure: internal
-
+events:
+  postStart:
+    - createbucket
 commands:
   - id: justtesting
     exec:
       commandLine: /bin/bash -c 'echo "Just Testing"'
       component: app-server
+  - id: createbucket
+    exec:
+      commandLine: |
+        curl https://dl.min.io/client/mc/release/linux-amd64/mc \
+        --create-dirs \
+        -o $HOME/minio-binaries/mc
+        curl https://dl.min.io/client/mc/release/linux-amd64/mc 
+        
+      component: app-server
+      label: Create Minio Bucket
+      workingDir: $HOME
   - id: build
     exec:
       commandLine: /bin/bash --login -c 'rvm use system && ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle && npm i'
