--- a/devfile.yaml
+++ b/devfile.yaml
@@ -142,9 +142,9 @@ commands:
         curl https://dl.min.io/client/mc/release/linux-amd64/mc 
         chmod +x $HOME/minio-binaries/mc
         export PATH=$PATH:$HOME/minio-binaries/
-        mc alias set myminio http://minio:9000 minio_development minio_development
+        mc alias set myminio http://127.0.0.1:9000 minio_development minio_development
         mc mb myminio/secure-bucket
-        
+
       component: app-server
       label: Create Minio Bucket
       workingDir: $HOME
