--- a/devfile.yaml
+++ b/devfile.yaml
@@ -139,10 +139,10 @@ commands:
         curl https://dl.min.io/client/mc/release/linux-amd64/mc \
         --create-dirs \
         -o $HOME/minio-binaries/mc
-        curl https://dl.min.io/client/mc/release/linux-amd64/mc 
-        chmod +x $HOME/minio-binaries/mc
-        export PATH=$PATH:$HOME/minio-binaries/
-        mc alias set myminio http://127.0.0.1:9000 minio_development minio_development
+        curl https://dl.min.io/client/mc/release/linux-amd64/mc && \
+        chmod +x $HOME/minio-binaries/mc && \
+        export PATH=$PATH:$HOME/minio-binaries/ && \
+        mc alias set myminio http://127.0.0.1:9000 minio_development minio_development && \
         mc mb myminio/secure-bucket
 
       component: app-server
