--- a/devfile.yaml
+++ b/devfile.yaml
@@ -138,8 +138,7 @@ commands:
       commandLine: |
         (curl https://dl.min.io/client/mc/release/linux-amd64/mc \
         --create-dirs \
-        -o $HOME/minio-binaries/mc
-        curl https://dl.min.io/client/mc/release/linux-amd64/mc && \
+        -o $HOME/minio-binaries/mc && \
         chmod +x $HOME/minio-binaries/mc && \
         export PATH=$PATH:$HOME/minio-binaries/ && \
         mc alias set myminio http://127.0.0.1:9000 minio_development minio_development && \
