--- a/devfile.yaml
+++ b/devfile.yaml
@@ -138,10 +138,10 @@ commands:
       commandLine: |
         curl https://dl.min.io/client/mc/release/linux-amd64/mc \
         --create-dirs \
-        -o $HOME/minio-binaries/mc | tee -a $HOME/postStart.log && \
+        -o $HOME/minio-binaries/mc 2>&1 | tee -a $HOME/postStart.log && \
         chmod --verbose +x $HOME/minio-binaries/mc | tee -a $HOME/postStart.log && \
         export PATH=$PATH:$HOME/minio-binaries/ && \
-        mc alias set myminio http://127.0.0.1:9000 minio_development minio_development && \
+        mc alias set myminio http://127.0.0.1:9000 minio_development minio_development | tee -a $HOME/postStart.log && \
         mc mb myminio/secure-bucket | tee -a $HOME/postStart.log
 
       component: app-server
