--- a/devfile.yaml
+++ b/devfile.yaml
@@ -75,6 +75,8 @@ components:
           value: us-east-1
         - name: MINIO_BUCKET
           value: secure-bucket
+        - name: MC_CONFIG_DIR
+          value: /tmp
   - name: es
     container:
       image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
@@ -136,11 +138,11 @@ commands:
   - id: createbucket
     exec:
       commandLine: |
-        MC_CONFIG_DIR=/tmp curl https://dl.min.io/client/mc/release/linux-amd64/mc \
+        curl https://dl.min.io/client/mc/release/linux-amd64/mc \
         --create-dirs \
         -o /tmp/minio-binaries/mc && \
         chmod +x /tmp/minio-binaries/mc && \
-        export PATH=$PATH:/tmp/minio-binaries/ && \
+        export PATH=$PATH:/tmp/minio-binaries/
         mc alias set myminio http://127.0.0.1:9000 minio_development minio_development && \
         mc mb myminio/secure-bucket
 
