--- a/devfile.yaml
+++ b/devfile.yaml
@@ -128,8 +128,7 @@ components:
           protocol: tcp
           exposure: internal
 events:
-  postStart:
-    - createbucket
+  postStart: []
 commands:
   - id: justtesting
     exec:
@@ -143,8 +142,8 @@ commands:
         -o /tmp/minio-binaries/mc && \
         chmod +x /tmp/minio-binaries/mc && \
         export PATH=$PATH:/tmp/minio-binaries/
-        # mc alias set myminio http://127.0.0.1:9000 minio_development minio_development && \
-        # mc mb myminio/secure-bucket
+        mc alias set myminio http://127.0.0.1:9000 minio_development minio_development && \
+        mc mb myminio/secure-bucket
 
       component: minio
       label: Create Minio Bucket
