--- a/devfile.yaml
+++ b/devfile.yaml
@@ -25,8 +25,6 @@ components:
       env:
         - name: RAILS_ENV
           value: development
-        - name: PROJECTROOT
-          value: $(PROJECTS_ROOT)
         - name: DATABASE_URL
           value: mysql2://root:example@127.0.0.1:3306
         - name: MEMCACHED_HOST
@@ -134,6 +132,7 @@ components:
 events:
   postStart:
     - createbucket
+    - install-github-copilot
     
 commands:
   - id: createbucket
@@ -150,6 +149,13 @@ commands:
       component: minio
       label: Create Minio Bucket
       workingDir: /tmp
+  - id: install-github-copilot
+    exec:
+      commandLine: |
+        code-oss --install-extension ${PROJECT_SOURCE}/.vscode/GitHub.copilot-1.143.601.vsix
+
+      component: app-server
+      label: Install Github Copilot for VSX file
   - id: build
     exec:
       commandLine: /bin/bash --login -c 'rvm use system && ${PROJECT_SOURCE}/bin/bundle install --path vendor/bundle && npm i'
