--- a/devfile.yaml
+++ b/devfile.yaml
@@ -151,9 +151,7 @@ commands:
       workingDir: /tmp
   - id: install-github-copilot
     exec:
-      commandLine: |
-        code-oss --list-extensions # --install-extension /projects/sams-cola/.vscode/GitHub.copilot-1.143.601.vsix
-
+      commandLine: echo "Hi"
       component: app-server
       label: Install Github Copilot for VSX file
   - id: build
